Added citation to mit

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -68,7 +68,7 @@
                     <a href="https://www.kaggle.com/lislejoem/us-minimum-wage-by-state-from-1968-to-2017/data">Kaggle</a>
                 </li>
                 <li>
-                    <a href="https://livingwage.mit.edu">MIT</a>
+                    <p><a href="https://livingwage.mit.edu">MIT</a>: Glasmeier, Amy K. Living Wage Calculator. 2020. Massachusetts Institute of Technology. livingwage.mit.edu.</p>
                 </li>
             </ul>
         </div>
