--- a/templates/overview.html
+++ b/templates/overview.html
@@ -36,7 +36,7 @@
         </nav>
     </div>
     <div class="container">
-        <div class="row border">
+        <div class="row">
             <h1>Can People Live Off of Minimum Wage?</h1>
         </div>
         <div class="row">
