--- a/templates/about.html
+++ b/templates/about.html
@@ -35,17 +35,14 @@
             </div>
         </nav>
     </div>
-    <div class="container"
+    <div class="container">
         <div class="row row-cols-2" style="margin-top: 20px;">
             
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Moriah Taylor</h3>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <rect width="100%" height="100%" fill="#868e96"></rect>
-                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Moriah Taylor</text>
-                    </svg>
+                    <img src="/images/MoriahTaylor.jpg" alt="Moriah Taylor">
                     <div class="card-body">
-                        <p class="card-text">Data Scientist</p>
+                        <p class="card-text">Data Analyst</p>
                     </div>
                     <div class="card-body">
                         <a href="https://github.com/moriahtaylor1" class="card-link">GitHub</a>
@@ -64,8 +61,9 @@
                         <a href="https://www.linkedin.com/in/nicolebroussard8469" class="card-link">LinkedIn</a>
                     </div>
                 </div>
+        </div>
             
-            
+        <div class="row row-cols-2" style="margin-top: 20px;">
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Lauren McCarthy</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
@@ -96,7 +94,6 @@
                         <a href="https://www.linkedin.com/in/shalynalavoie/" class="card-link">LinkedIn</a>
                     </div>
                 </div>
-            
         </div>
     </div>
 </body>
