--- a/templates/index.html
+++ b/templates/index.html
@@ -88,7 +88,10 @@
                 <select id="selYear">
                     <option></option>
                 </select>
-                <div id="bar"></div>
+                
+                <div>
+                    <canvas id="myBarChart" width="400" height="400"></canvas>
+                </div>
                 <script src="/static/bubblechart.js"></script>
             </div>
         </div>
