--- a/templates/about.html
+++ b/templates/about.html
@@ -52,7 +52,9 @@
             
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Nicole Pierre</h3>
-                    <img src="/images/NicolePierre.jpg" alt="Nicole Pierre">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                        <image href="../images/NicolePierre.jpg" alt="Nicole Pierre">
+                    </svg>
                     <div class="card-body">
                         <p class="card-text">Data Scientist & Web Designer</p>
                     </div>
