--- a/templates/about.html
+++ b/templates/about.html
@@ -40,7 +40,9 @@
             
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Moriah Taylor</h3>
-                    <img src="./images/MoriahTaylor.jpg" alt="Moriah Taylor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                        <img href="./images/MoriahTaylor.jpg" alt="Moriah Taylor">
+                    </svg>
                     <div class="card-body">
                         <p class="card-text">Data Analyst</p>
                     </div>
@@ -53,7 +55,7 @@
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Nicole Pierre</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <image href="./images/NicolePierre.jpg" alt="Nicole Pierre">
+                        <img href="./images/NicolePierre.jpg" alt="Nicole Pierre">
                     </svg>
                     <div class="card-body">
                         <p class="card-text">Data Scientist & Web Designer</p>
@@ -69,8 +71,7 @@
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Lauren McCarthy</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <rect width="100%" height="100%" fill="#868e96"></rect>
-                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Lauren McCarthy</text>
+                        <image href="" alt="Lauren McCarthy">
                     </svg>
                     <div class="card-body">
                         <p class="card-text">Data Scientist</p>
