--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Moriah Taylor</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <img href="./images/MoriahTaylor.jpg" alt="Moriah Taylor">
+                        <img src="./images/MoriahTaylor.jpg" alt="Moriah Taylor">
                     </svg>
                     <div class="card-body">
                         <p class="card-text">Data Analyst</p>
