--- a/templates/index.html
+++ b/templates/index.html
@@ -85,10 +85,12 @@
         </div>
         <div class="row">
             <div class="col-md-12">
+                <label for="selYear" class="col-form-label">
+                      CHOOSE YEAR
+                </label>
                 <select id="selYear">
                     <option></option>
-                </select>
-                
+                </select>                
                 <div>
                     <canvas id="myBarChart" width="400" height="400"></canvas>
                 </div>
