--- a/templates/about.html
+++ b/templates/about.html
@@ -89,7 +89,7 @@
                         <rect width="100%" height="100%" fill="#868e96"></rect>
                         <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Shalyn Lavoie</text>
                     </svg> -->
-                    <img src="../images/Shalyn_Lavoie.jpg" alt="">
+                    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEvNG3Wx80GmQ/profile-displayphoto-shrink_400_400/0/1603759582790?e=1631750400&v=beta&t=qsXUgjQaJM2KN_kTqtm5vFRebiOsaB3WyIi-2YLBzPY" alt="">
                     <div class="card-body">
                         <p class="card-text">Data Scientist</p>
                     </div>
