--- a/static/styles.css
+++ b/static/styles.css
@@ -161,16 +161,41 @@ body {
 
 path:hover {fill-opacity: .7;}
 
+/* Tooltip container */
 .tooltip {
-  display: none;
-  position: absolute;
-  width: 100px;
-  height: 30px;
-  padding: 1px;
-  font: 12px sans-serif;
-  color:#ffffff;
+  position: relative;
+  display: inline-block;
+}
+
+/* Tooltip text */
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  bottom: 100%;
+  left: 50%;
+  margin-left: -60px;
+  background-color: black;
+  color: #fff;
   text-align: center;
-  background: black;
-  border: 0;
-  border-radius: 10px;
+  padding: 5px 0;
+  border-radius: 6px;
+  /* Position the tooltip text - see examples below! */
+  position: absolute;
+  z-index: 1;
+}
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+.tooltip .tooltiptext::after {
+  content: " ";
+  position: absolute;
+  top: 100%; /* At the bottom of the tooltip */
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
 }
