--- a/templates/about.html
+++ b/templates/about.html
@@ -59,7 +59,8 @@
                         <img href="./images/NicolePierre.jpg" alt="Nicole Pierre">
                     </svg>
                     <div class="card-body"> -->
-                        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHdyRpjtPW9wA/profile-displayphoto-shrink_400_400/0/1580184088741?e=1631750400&v=beta&t=hWOcfzbJg5VI7w5153Ld7yJZItoIvnFSIw-9Ez5ra80" alt="">
+                    <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHdyRpjtPW9wA/profile-displayphoto-shrink_400_400/0/1580184088741?e=1631750400&v=beta&t=hWOcfzbJg5VI7w5153Ld7yJZItoIvnFSIw-9Ez5ra80" alt="">
+                    <div class="card-body">
                         <p class="card-text">Data Scientist & Web Designer</p>
                     </div>
                     <div class="card-body">
