--- a/templates/about.html
+++ b/templates/about.html
@@ -87,11 +87,10 @@
                 </div>
             
             
-                <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left:auto;">
+                <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Shalyn Lavoie</h3>
                     <!-- <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <rect width="100%" height="100%" fill="#868e96"></rect>
-                        <text x="50%" y="50%" fill="#dee2e6" dy=".3em">Shalyn Lavoie</text>
+                        <image href="" alt="Lauren McCarthy">
                     </svg> -->
                     <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEvNG3Wx80GmQ/profile-displayphoto-shrink_400_400/0/1603759582790?e=1631750400&v=beta&t=qsXUgjQaJM2KN_kTqtm5vFRebiOsaB3WyIi-2YLBzPY" alt="">
                     <div class="card-body">
