--- a/templates/about.html
+++ b/templates/about.html
@@ -55,11 +55,11 @@
             
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Nicole Pierre</h3>
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <img href="./images/NicolePierre.jpg" alt="Nicole Pierre">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                        <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHdyRpjtPW9wA/profile-displayphoto-shrink_400_400/0/1580184088741?e=1631750400&v=beta&t=hWOcfzbJg5VI7w5153Ld7yJZItoIvnFSIw-9Ez5ra80" alt="Nicole Pierre">
                     </svg>
-                    <div class="card-body"> -->
-                    <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHdyRpjtPW9wA/profile-displayphoto-shrink_400_400/0/1580184088741?e=1631750400&v=beta&t=hWOcfzbJg5VI7w5153Ld7yJZItoIvnFSIw-9Ez5ra80" alt="">
+                    <div class="card-body">
+                    <!-- <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHdyRpjtPW9wA/profile-displayphoto-shrink_400_400/0/1580184088741?e=1631750400&v=beta&t=hWOcfzbJg5VI7w5153Ld7yJZItoIvnFSIw-9Ez5ra80" alt=""> -->
                     <div class="card-body">
                         <p class="card-text">Data Scientist & Web Designer</p>
                     </div>
@@ -89,10 +89,10 @@
             
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Shalyn Lavoie</h3>
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <image href="" alt="Lauren McCarthy">
-                    </svg> -->
-                    <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEvNG3Wx80GmQ/profile-displayphoto-shrink_400_400/0/1603759582790?e=1631750400&v=beta&t=qsXUgjQaJM2KN_kTqtm5vFRebiOsaB3WyIi-2YLBzPY" alt="">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                        <image src="https://media-exp1.licdn.com/dms/image/C4D03AQEvNG3Wx80GmQ/profile-displayphoto-shrink_400_400/0/1603759582790?e=1631750400&v=beta&t=qsXUgjQaJM2KN_kTqtm5vFRebiOsaB3WyIi-2YLBzPY" alt="Shalyn Lavoie">
+                    </svg>
+                    <!-- <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEvNG3Wx80GmQ/profile-displayphoto-shrink_400_400/0/1603759582790?e=1631750400&v=beta&t=qsXUgjQaJM2KN_kTqtm5vFRebiOsaB3WyIi-2YLBzPY" alt=""> -->
                     <div class="card-body">
                         <p class="card-text">Data Scientist</p>
                     </div>
