--- a/templates/about.html
+++ b/templates/about.html
@@ -71,15 +71,15 @@
         </div>
             
         <div class="row row-cols-2" style="margin-top: 20px;">
-                
+            
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Lauren McCarthy</h3>
-                    <!-- <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <image href="" alt="Lauren McCarthy">
-                    </svg> -->
-                    <img src="https://media-exp1.licdn.com/dms/image/C5603AQFUO6b0yLnsjw/profile-displayphoto-shrink_400_400/0/1626040780508?e=1631750400&v=beta&t=ggBYNhgKH3FVizIVn0dnSSBT1D0q9l8EusDMK9YtZrk" alt="">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                        <img src="https://media-exp1.licdn.com/dms/image/C5603AQFUO6b0yLnsjw/profile-displayphoto-shrink_400_400/0/1626040780508?e=1631750400&v=beta&t=ggBYNhgKH3FVizIVn0dnSSBT1D0q9l8EusDMK9YtZrk" alt="Lauren McCarthy">
+                    </svg>
+                    <!-- <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHz6KpC6RNR5A/profile-displayphoto-shrink_400_400/0/1604631086163?e=1631750400&v=beta&t=DLDqL18o5fuXePpQFie_Uho_-5E2Jxhp_J943zpwu-4" alt=""> -->
                     <div class="card-body">
-                        <p class="card-text">Data Scientist</p>
+                        <p class="card-text">Data Analyst</p>
                     </div>
                     <div class="card-body">
                         <a href="https://github.com/lamccart15" class="card-link">GitHub</a>
@@ -87,13 +87,13 @@
                     </div>
                 </div>
             
-            
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Shalyn Lavoie</h3>
                     <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
-                        <image src="https://media-exp1.licdn.com/dms/image/C4D03AQEvNG3Wx80GmQ/profile-displayphoto-shrink_400_400/0/1603759582790?e=1631750400&v=beta&t=qsXUgjQaJM2KN_kTqtm5vFRebiOsaB3WyIi-2YLBzPY" alt="Shalyn Lavoie">
+                        <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEvNG3Wx80GmQ/profile-displayphoto-shrink_400_400/0/1603759582790?e=1631750400&v=beta&t=qsXUgjQaJM2KN_kTqtm5vFRebiOsaB3WyIi-2YLBzPY" alt="Shalyn Lavoie">
                     </svg>
-                    <!-- <img src="https://media-exp1.licdn.com/dms/image/C4D03AQEvNG3Wx80GmQ/profile-displayphoto-shrink_400_400/0/1603759582790?e=1631750400&v=beta&t=qsXUgjQaJM2KN_kTqtm5vFRebiOsaB3WyIi-2YLBzPY" alt=""> -->
+                    <div class="card-body">
+                    <!-- <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHdyRpjtPW9wA/profile-displayphoto-shrink_400_400/0/1580184088741?e=1631750400&v=beta&t=hWOcfzbJg5VI7w5153Ld7yJZItoIvnFSIw-9Ez5ra80" alt=""> -->
                     <div class="card-body">
                         <p class="card-text">Data Scientist</p>
                     </div>
@@ -102,7 +102,6 @@
                         <a href="https://www.linkedin.com/in/shalynalavoie/" class="card-link">LinkedIn</a>
                     </div>
                 </div>
-        
         </div>
     </div>
 </body>
