--- a/templates/about.html
+++ b/templates/about.html
@@ -72,7 +72,7 @@
             
                 <div class="card mb-3 col-md-3" style="margin-right: auto; margin-left: auto;">
                     <h3 class="card-header">Lauren McCarthy</h3>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="100%" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="d-block user-select-none" width="100%" height="200" aria-label="Placeholder: Image cap" focusable="false" role="img" preserveAspectRatio="xMidYMid slice" viewBox="0 0 318 180" style="font-size:1.125rem;text-anchor:middle">
                         <img src="https://media-exp1.licdn.com/dms/image/C5603AQFUO6b0yLnsjw/profile-displayphoto-shrink_400_400/0/1626040780508?e=1631750400&v=beta&t=ggBYNhgKH3FVizIVn0dnSSBT1D0q9l8EusDMK9YtZrk" alt="Lauren McCarthy">
                     </svg>
                     <!-- <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHz6KpC6RNR5A/profile-displayphoto-shrink_400_400/0/1604631086163?e=1631750400&v=beta&t=DLDqL18o5fuXePpQFie_Uho_-5E2Jxhp_J943zpwu-4" alt=""> -->
