--- a/templates/overview.html
+++ b/templates/overview.html
@@ -39,7 +39,7 @@
         <div class="row">
             <h1>Can People Live Off of Minimum Wage?</h1>
         </div>
-        <div class="card border-secondary mb-3" style="max-width: 20rem;">
+        <div class="card border-secondary mb-3" style="max-width: 20rem; margin-right: auto;">
             <div class="card-header"></div>
             <div class="card-body">
                 <h4 class="card-title">Our Goal:</h4>
@@ -47,7 +47,7 @@
                 Some people have to provide for more than just themselves so we also wanted to take a look at what a livable wage is for a few different family types.</p>
             </div>
         </div>
-        <div class="card border-danger mb-3" style="max-width: 20rem;">
+        <div class="card border-danger mb-3" style="max-width: 20rem; margin-right: auto;">
             <div class="card-header"></div>
             <div class="card-body">
                 <h4 class="card-title">Libraries/Databses used in this Project:</h4>
@@ -64,7 +64,7 @@
                 </p>
             </div>
         </div>
-        <div class="card border-success mb-3" style="max-width: 20rem;">
+        <div class="card border-success mb-3" style="max-width: 20rem; margin-right: auto;">
             <div class="card-header"></div>
             <div class="card-body">
                 <h4 class="card-title">Datasets used for Analysis:</h4>
