--- a/templates/overview.html
+++ b/templates/overview.html
@@ -39,45 +39,47 @@
         <div class="row">
             <h1>Can People Live Off of Minimum Wage?</h1>
         </div>
-        <div class="card border-secondary mb-3" style="max-width: 20rem; margin-right: auto;">
-            <div class="card-header"></div>
-            <div class="card-body">
-                <h4 class="card-title">Our Goal:</h4>
-                <p class="card-text">Visualize minimum wage and federal wage by state and year to see how it compares to the living wage. Ultimately, we are taking a look at minimum wage and if it is a liveable wage and/or show how it’s not.
-                Some people have to provide for more than just themselves so we also wanted to take a look at what a livable wage is for a few different family types.</p>
+        <div class="row">
+            <div class="card border-secondary mb-3" style="max-width: 20rem; margin-right: auto;">
+                <div class="card-header"></div>
+                <div class="card-body">
+                    <h4 class="card-title">Our Goal:</h4>
+                    <p class="card-text">Visualize minimum wage and federal wage by state and year to see how it compares to the living wage. Ultimately, we are taking a look at minimum wage and if it is a liveable wage and/or show how it’s not.
+                    Some people have to provide for more than just themselves so we also wanted to take a look at what a livable wage is for a few different family types.</p>
+                </div>
             </div>
-        </div>
-        <div class="card border-danger mb-3" style="max-width: 20rem; margin-right: auto;">
-            <div class="card-header"></div>
-            <div class="card-body">
-                <h4 class="card-title">Libraries/Databses used in this Project:</h4>
-                <p class="card-text">
-                    <ul style="list-style-type: circle;" style="font-size: 20px;" id="libraries">
-                        <li>D3.js</li>
-                        <li>Plotly</li>
-                        <li>Chart.js</li>
-                        <li>SQL</li>
-                        <li>Pandas</li>
-                        <li>Bootstrap</li>
-                        <li>Heroku</li>
-                    </ul>
-                </p>
+            <div class="card border-danger mb-3" style="max-width: 20rem; margin-right: auto;">
+                <div class="card-header"></div>
+                <div class="card-body">
+                    <h4 class="card-title">Libraries/Databses used in this Project:</h4>
+                    <p class="card-text">
+                        <ul style="list-style-type: circle;" style="font-size: 20px;" id="libraries">
+                            <li>D3.js</li>
+                            <li>Plotly</li>
+                            <li>Chart.js</li>
+                            <li>SQL</li>
+                            <li>Pandas</li>
+                            <li>Bootstrap</li>
+                            <li>Heroku</li>
+                        </ul>
+                    </p>
+                </div>
             </div>
-        </div>
-        <div class="card border-success mb-3" style="max-width: 20rem; margin-right: auto;">
-            <div class="card-header"></div>
-            <div class="card-body">
-                <h4 class="card-title">Datasets used for Analysis:</h4>
-                <p class="card-text">
-                    <ul style="list-style-type: circle;" style="font-size: 20px;" id="links">
-                        <li>
-                            <a href="https://www.kaggle.com/lislejoem/us-minimum-wage-by-state-from-1968-to-2017/data">Kaggle</a>
-                        </li>
-                        <li>
-                            <p><a href="https://livingwage.mit.edu">MIT</a>: Glasmeier, Amy K. Living Wage Calculator. 2020. Massachusetts Institute of Technology. livingwage.mit.edu.</p>
-                        </li>
-                    </ul>
-                </p>
+            <div class="card border-success mb-3" style="max-width: 20rem; margin-right: auto;">
+                <div class="card-header"></div>
+                <div class="card-body">
+                    <h4 class="card-title">Datasets used for Analysis:</h4>
+                    <p class="card-text">
+                        <ul style="list-style-type: circle;" style="font-size: 20px;" id="links">
+                            <li>
+                                <a href="https://www.kaggle.com/lislejoem/us-minimum-wage-by-state-from-1968-to-2017/data">Kaggle</a>
+                            </li>
+                            <li>
+                                <p><a href="https://livingwage.mit.edu">MIT</a>: Glasmeier, Amy K. Living Wage Calculator. 2020. Massachusetts Institute of Technology. livingwage.mit.edu.</p>
+                            </li>
+                        </ul>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
