--- a/templates/overview.html
+++ b/templates/overview.html
@@ -36,10 +36,10 @@
         </nav>
     </div>
     <div class="container">
-        <div class="row">
+        <div class="row" style="margin-top: 20px;">
             <h1>Can People Live Off of Minimum Wage?</h1>
         </div>
-        <div class="row">
+        <div class="row" style="margin-top: auto;">
             <div class="card border-secondary mb-3" style="max-width: 20rem; margin-right: auto;">
                 <div class="card-header"></div>
                 <div class="card-body">
