--- a/templates/overview.html
+++ b/templates/overview.html
@@ -39,7 +39,7 @@
         <div class="row" style="margin-top: 20px;">
             <h1>Can People Live Off of Minimum Wage?</h1>
         </div>
-        <div class="row" style="margin-top: auto;">
+        <div class="row" style="margin-top: 35px">
             <div class="card border-secondary mb-3" style="max-width: 20rem; margin-right: auto;">
                 <div class="card-header"></div>
                 <div class="card-body">
