--- a/templates/overview.html
+++ b/templates/overview.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/bootstrap.min-2.css">
     <title>Minimum Wage</title>
 </head>
-<body>
+<body style="background-color: #CDF0EA;">
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
