--- a/templates/overview.html
+++ b/templates/overview.html
@@ -45,7 +45,7 @@
                 <div class="card-body">
                     <h4 class="card-title">Our Goal:</h4>
                     <p class="card-text">Visualize minimum wage and federal wage by state and year to see how it compares to the living wage. Ultimately, we are taking a look at minimum wage and if it is a liveable wage and/or show how it’s not.
-                    Some people have to provide for more than just themselves so we also wanted to take a look at what a livable wage is for a few different family types.</p>
+                    Some people have to provide for more than just themselves so we also wanted to take a look at what a livable wage is for different family types.</p>
                 </div>
             </div>
             <div class="card border-danger mb-3" style="max-width: 20rem; margin-right: auto;">
