--- a/templates/about.html
+++ b/templates/about.html
@@ -60,7 +60,7 @@
                     </svg>
                     <!-- <img src="https://media-exp1.licdn.com/dms/image/C4E03AQHdyRpjtPW9wA/profile-displayphoto-shrink_400_400/0/1580184088741?e=1631750400&v=beta&t=hWOcfzbJg5VI7w5153Ld7yJZItoIvnFSIw-9Ez5ra80" alt=""> -->
                     <div class="card-body">
-                        <p class="card-text">Data Scientist & Web Designer</p>
+                        <p class="card-text">Data Analyst & Web Designer</p>
                     </div>
                     <div class="card-body">
                         <a href="https://github.com/nicpie-bit" class="card-link">GitHub</a>
