--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/static/bootstrap.min-2.css">
     <title>Minimum Wage</title>
 </head>
-<body style="background-color: #FFDCDC;">
+<body style="background-color: #D3E0DC;">
     <div class="navigation">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container-fluid">
