--- a/templates/overview.html
+++ b/templates/overview.html
@@ -60,6 +60,7 @@
                             <li>SQL</li>
                             <li>Pandas</li>
                             <li>Bootstrap</li>
+                            <li>Bootswatch</li>
                             <li>Heroku</li>
                         </ul>
                     </p>
