--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.4.1/dist/chart.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-    <script src="//d3js.org/topojson.v1.min.js"></script>
+    <script src="https://d3js.org/topojson.v1.min.js"></script>
     <link rel="stylesheet" href="/static/bootstrap.min-2.css">
     <link rel="stylesheet" type="text/css" href="/static/styles.css">
     <title>Minimum Wage</title>
@@ -77,7 +77,6 @@
         <div class="row">
             <div class="col-md-12">
                 <select id="selState">
-                    <option></option>
                 </select>
                 <div id="line"></div>
                 <script src="/static/chart.js"></script>
@@ -89,7 +88,6 @@
                       CHOOSE YEAR
                 </label>
                 <select id="selYear">
-                    <option></option>
                 </select>                
                 <div>
                     <canvas id="myBarChart" width="400" height="400"></canvas>
