--- a/templates/index.html
+++ b/templates/index.html
@@ -75,6 +75,7 @@
             </div>
         </div>
         <div class="row">
+            <h4 style="color:black">Comparing Federal Minimum Wage to State Minimum Wage</h4>
             <div class="col-md-12">
                 <select id="selState">
                 </select>
@@ -83,6 +84,7 @@
             </div>
         </div>
         <div class="row">
+            <h4 style="color:black">Historical Minimum Wage by State</h4>
             <div class="col-md-12">
                 <label for="selYear" class="col-form-label">
                       CHOOSE YEAR
@@ -96,6 +98,7 @@
             </div>
         </div>
         <div class="row">
+            <h4 style="color:black">Living Wage by State and Family Size</h4>
             <div class="col-xs-12 col-lg-4 searchContainer">
                 <body>
                     <script defer type="text/javascript" src="/static/choropleth.js"></script>
